Figuring out venv

--- a/snowfall.ipynb
+++ b/snowfall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,136 +11,15 @@
     "import matplotlib.pyplot as plt\n",
     "import gudhi as gd\n",
     "\n",
-    "import utils as u\n",
     "from datetime import datetime\n",
     "import matplotlib.dates as mdates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       ABSAROKEE 3.0 SW (STILLWATER) ADEL (CASCADE) ALBERTON (MINERAL)  \\\n",
-      "Date                                                                     \n",
-      "Dec 1                            NaN            NaN                  0   \n",
-      "Dec 10                           NaN            NaN                  0   \n",
-      "Dec 11                           NaN            NaN                  0   \n",
-      "Dec 12                           NaN            NaN                  0   \n",
-      "Dec 13                           NaN            NaN                0.3   \n",
-      "...                              ...            ...                ...   \n",
-      "Oct 5                            NaN            NaN                  0   \n",
-      "Oct 6                            NaN            NaN                  0   \n",
-      "Oct 7                            NaN            NaN                  0   \n",
-      "Oct 8                            NaN            NaN                  0   \n",
-      "Oct 9                            NaN            NaN                  0   \n",
-      "\n",
-      "       ALDER 19S (MADISON) ANACONDA (DEERLODGE) ANACONDA 7.4 NW (DEERLODGE)  \\\n",
-      "Date                                                                          \n",
-      "Dec 1                 None                    0                           0   \n",
-      "Dec 10                None                    0                        0.01   \n",
-      "Dec 11                None                    0                           0   \n",
-      "Dec 12                None                    0                           0   \n",
-      "Dec 13                None                    0                           0   \n",
-      "...                    ...                  ...                         ...   \n",
-      "Oct 5                  NaN                 None                           0   \n",
-      "Oct 6                  NaN                 None                           0   \n",
-      "Oct 7                  NaN                 None                           0   \n",
-      "Oct 8                  NaN                 None                           0   \n",
-      "Oct 9                  NaN                 None                           0   \n",
-      "\n",
-      "       ARLEE 16.7 WNW (SANDERS) ASHLAND 11.9 E (POWDERRIVER)  \\\n",
-      "Date                                                           \n",
-      "Dec 1                       NaN                          NaN   \n",
-      "Dec 10                      NaN                          NaN   \n",
-      "Dec 11                      NaN                          NaN   \n",
-      "Dec 12                      NaN                          NaN   \n",
-      "Dec 13                      NaN                          NaN   \n",
-      "...                         ...                          ...   \n",
-      "Oct 5                       NaN                          NaN   \n",
-      "Oct 6                       NaN                          NaN   \n",
-      "Oct 7                       NaN                          NaN   \n",
-      "Oct 8                       NaN                          NaN   \n",
-      "Oct 9                       NaN                          NaN   \n",
-      "\n",
-      "       ASHLAND 9.7 ESE (POWDERRIVER) AUGUSTA (LEWISANDCLARK)  ...  \\\n",
-      "Date                                                          ...   \n",
-      "Dec 1                              0                    None  ...   \n",
-      "Dec 10                           0.7                       0  ...   \n",
-      "Dec 11                           4.2                       0  ...   \n",
-      "Dec 12                          None                       0  ...   \n",
-      "Dec 13                             0                    None  ...   \n",
-      "...                              ...                     ...  ...   \n",
-      "Oct 5                              0                       0  ...   \n",
-      "Oct 6                              0                       0  ...   \n",
-      "Oct 7                           None                       0  ...   \n",
-      "Oct 8                              0                       0  ...   \n",
-      "Oct 9                           None                       0  ...   \n",
-      "\n",
-      "       WILSALL 1S (PARK) WINNETT 12 SW (PETROLEUM) WINNETT 6NNE (PETROLEUM)  \\\n",
-      "Date                                                                          \n",
-      "Dec 1                  0                       NaN                        0   \n",
-      "Dec 10                 0                       NaN                        0   \n",
-      "Dec 11                 0                       NaN                        0   \n",
-      "Dec 12                 0                       NaN                        0   \n",
-      "Dec 13                 0                       NaN                        0   \n",
-      "...                  ...                       ...                      ...   \n",
-      "Oct 5               None                       NaN                      NaN   \n",
-      "Oct 6               None                       NaN                      NaN   \n",
-      "Oct 7               None                       NaN                      NaN   \n",
-      "Oct 8               None                       NaN                      NaN   \n",
-      "Oct 9               None                       NaN                      NaN   \n",
-      "\n",
-      "       WISE RIVER 3 WNW (BEAVERHEAD) WOLF POINT (ROOSEVELT)  \\\n",
-      "Date                                                          \n",
-      "Dec 1                              0                      0   \n",
-      "Dec 10                             0                   0.01   \n",
-      "Dec 11                             0                      0   \n",
-      "Dec 12                             0                    0.3   \n",
-      "Dec 13                             0                      0   \n",
-      "...                              ...                    ...   \n",
-      "Oct 5                              0                      0   \n",
-      "Oct 6                           None                      0   \n",
-      "Oct 7                              0                      0   \n",
-      "Oct 8                              0                      0   \n",
-      "Oct 9                           None                      0   \n",
-      "\n",
-      "       WOLF POINT INTL AP (ROOSEVELT) YAAK 0.3 W (LINCOLN)  \\\n",
-      "Date                                                         \n",
-      "Dec 1                             NaN                    0   \n",
-      "Dec 10                            NaN                 None   \n",
-      "Dec 11                            NaN                 None   \n",
-      "Dec 12                            NaN                 None   \n",
-      "Dec 13                            NaN                 None   \n",
-      "...                               ...                  ...   \n",
-      "Oct 5                            None                    0   \n",
-      "Oct 6                            None                    0   \n",
-      "Oct 7                            None                    0   \n",
-      "Oct 8                            None                 None   \n",
-      "Oct 9                            None                 None   \n",
-      "\n",
-      "       YAAK 9NNE (LINCOLN) YELLOWTAIL DAM (BIGHORN) ZORTMAN (PHILLIPS)  \n",
-      "Date                                                                    \n",
-      "Dec 1                    0                        0                  0  \n",
-      "Dec 10                   0                        0                  0  \n",
-      "Dec 11                 0.4                        0                0.7  \n",
-      "Dec 12                   0                        0                  0  \n",
-      "Dec 13                0.01                        0                  0  \n",
-      "...                    ...                      ...                ...  \n",
-      "Oct 5                    0                     None               None  \n",
-      "Oct 6                    0                     None               None  \n",
-      "Oct 7                    0                     None               None  \n",
-      "Oct 8                    0                     None               None  \n",
-      "Oct 9                    0                     None               None  \n",
-      "\n",
-      "[123 rows x 318 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of file paths\n",
     "file_paths = [\"snow_oct.csv\", \"snow_nov.csv\", \"snow_dec.csv\", \"snow_jan.csv\"]\n",
@@ -175,15 +54,30 @@
     "\n",
     "# Handle missing values: Replace \"M\" and \"T\" with NaN\n",
     "data_pivot.replace({\"M\": None, \"T\": 0.01}, inplace=True)\n",
-    "\n",
-    "# Display the resulting DataFrame\n",
-    "print(data_pivot)\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggregate_stations(data_file, county_areas):\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
