Updated Jupyter Notebook with aggregation function

--- a/snowfall.ipynb
+++ b/snowfall.ipynb
@@ -17,62 +17,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>date</th>\n",
+       "      <th>snow_depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MINERAL</td>\n",
+       "      <td>Oct 1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DEERLODGE</td>\n",
+       "      <td>Oct 1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DEERLODGE</td>\n",
+       "      <td>Oct 1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POWDERRIVER</td>\n",
+       "      <td>Oct 1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LEWISANDCLARK</td>\n",
+       "      <td>Oct 1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>VALLEY</td>\n",
+       "      <td>Oct 2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>VALLEY</td>\n",
+       "      <td>Oct 2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>VALLEY</td>\n",
+       "      <td>Oct 2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>VALLEY</td>\n",
+       "      <td>Oct 2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>BEAVERHEAD</td>\n",
+       "      <td>Oct 2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>345 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            County   date  snow_depth\n",
+       "0          MINERAL  Oct 1         0.0\n",
+       "1        DEERLODGE  Oct 1         NaN\n",
+       "2        DEERLODGE  Oct 1         0.0\n",
+       "3      POWDERRIVER  Oct 1         0.0\n",
+       "4    LEWISANDCLARK  Oct 1         NaN\n",
+       "..             ...    ...         ...\n",
+       "340         VALLEY  Oct 2         0.0\n",
+       "341         VALLEY  Oct 2         NaN\n",
+       "342         VALLEY  Oct 2         0.0\n",
+       "343         VALLEY  Oct 2         0.0\n",
+       "344     BEAVERHEAD  Oct 2         0.0\n",
+       "\n",
+       "[345 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List of file paths\n",
     "file_paths = [\"snow_oct.csv\", \"snow_nov.csv\", \"snow_dec.csv\", \"snow_jan.csv\"]\n",
     "\n",
-    "# Function to process each file\n",
-    "def process_file(file_path):\n",
-    "    # Read file and skip metadata rows\n",
-    "    df = pd.read_csv(file_path, skiprows=4)\n",
-    "    \n",
-    "    # Melt data to long format\n",
-    "    melted = pd.melt(\n",
-    "        df,\n",
-    "        id_vars=[\"GHCN ID\", \"Station Name\", \"County\", \"State\", \"Elevation\", \"Latitude\", \"Longitude\"],\n",
-    "        var_name=\"Date\",\n",
-    "        value_name=\"Snowfall\"\n",
-    "    )\n",
-    "    \n",
-    "    # Add unique station identifier for clarity\n",
-    "    melted[\"Station\"] = melted[\"Station Name\"] + \" (\" + melted[\"County\"] + \")\"\n",
-    "    \n",
-    "    return melted[[\"Date\", \"Station\", \"Snowfall\"]]\n",
+    "def preprocess_snow_data(file_paths):\n",
+    "    all_data = []\n",
     "\n",
-    "# Process and concatenate all files\n",
-    "data_long = pd.concat([process_file(file) for file in file_paths], ignore_index=True)\n",
+    "    for file_path in file_paths:\n",
+    "        # Load data, skipping metadata rows\n",
+    "        df = pd.read_csv(file_path, skiprows=4)\n",
     "\n",
-    "# Pivot data so site names become columns\n",
-    "data_pivot = data_long.pivot(index=\"Date\", columns=\"Station\", values=\"Snowfall\")\n",
+    "        # Identify date columns by removing metadata-related columns\n",
+    "        meta_cols = [\"GHCN ID\", \"Station Name\", \"County\", \"State\", \"Elevation\", \"Latitude\", \"Longitude\"]\n",
+    "        date_cols = [col for col in df.columns if col not in meta_cols]\n",
     "\n",
-    "# Clean up the index and column names (optional)\n",
-    "data_pivot.index.name = \"Date\"\n",
-    "data_pivot.columns.name = None\n",
+    "        # Melt the dataframe to long format, keeping only date columns\n",
+    "        df_long = df.melt(id_vars=[\"County\"], value_vars=date_cols, var_name=\"date\", value_name=\"snow_depth\")\n",
     "\n",
-    "# Handle missing values: Replace \"M\" and \"T\" with NaN\n",
-    "data_pivot.replace({\"M\": None, \"T\": 0.01}, inplace=True)\n",
+    "        # Replace 'M' with NaN and 'T' (trace amounts) with 0.01\n",
+    "        df_long[\"snow_depth\"] = df_long[\"snow_depth\"].replace({\"M\": None, \"T\": 0.01}).astype(float)\n",
+    "\n",
+    "        # Append to the list\n",
+    "        all_data.append(df_long)\n",
+    "\n",
+    "    # Concatenate all files\n",
+    "    clean_data = pd.concat(all_data, ignore_index=True)\n",
+    "\n",
+    "    return clean_data\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Test preprocessing with the uploaded December data\n",
+    "cleaned_snow_data = preprocess_snow_data(file_paths)\n",
+    "cleaned_snow_data.head(345)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       date  state_avg_snow\n",
+      "0     Dec 1        0.009223\n",
+      "1    Dec 10        0.218799\n",
+      "2    Dec 11        0.273005\n",
+      "3    Dec 12        0.091755\n",
+      "4    Dec 13        0.026163\n",
+      "..      ...             ...\n",
+      "118   Oct 5        0.000000\n",
+      "119   Oct 6        0.000000\n",
+      "120   Oct 7        0.000000\n",
+      "121   Oct 8        0.000000\n",
+      "122   Oct 9        0.000000\n",
+      "\n",
+      "[123 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "def aggregate_stations(data_file, county_areas):\n",
-    "    pass\n"
+    "def aggregate_snow_data(snow_data, county_areas):\n",
+    "    \n",
+    "    # Step 1: Average sensor readings per county per day\n",
+    "    county_avg_snow = snow_data.groupby([\"date\", \"County\"])[\"snow_depth\"].mean().reset_index()\n",
+    "\n",
+    "    # Step 2: Merge with county area data\n",
+    "    county_avg_snow = county_avg_snow.merge(county_areas, on=\"County\", how=\"left\")\n",
+    "\n",
+    "    # Step 3: Compute the weighted average snow depth for the state\n",
+    "    county_avg_snow[\"weighted_snow\"] = county_avg_snow[\"snow_depth\"] * county_avg_snow[\"AREA\"]\n",
+    "    \n",
+    "    # Compute the state-wide weighted average per day\n",
+    "    state_snow = county_avg_snow.groupby(\"date\").apply(\n",
+    "        lambda x: x[\"weighted_snow\"].sum() / x[\"AREA\"].sum()\n",
+    "    ).reset_index(name=\"state_avg_snow\")\n",
+    "    \n",
+    "    # Ensure the result is in DataFrame format\n",
+    "    return state_snow\n",
+    "\n",
+    "# Load county area data\n",
+    "county_areas_df = pd.read_csv(\"MTcounties.csv\")\n",
+    "\n",
+    "# Example usage (assuming cleaned data is ready)\n",
+    "aggregated_snow_data = aggregate_snow_data(cleaned_snow_data, county_areas_df)\n",
+    "\n",
+    "# Print or work with the DataFrame\n",
+    "print(aggregated_snow_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state_avg_snow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dec 1</td>\n",
+       "      <td>0.009223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dec 10</td>\n",
+       "      <td>0.218799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dec 11</td>\n",
+       "      <td>0.273005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dec 12</td>\n",
+       "      <td>0.091755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dec 13</td>\n",
+       "      <td>0.026163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Dec 14</td>\n",
+       "      <td>0.048648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dec 15</td>\n",
+       "      <td>0.238264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Dec 16</td>\n",
+       "      <td>0.169388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Dec 17</td>\n",
+       "      <td>0.355134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Dec 18</td>\n",
+       "      <td>0.270861</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     date  state_avg_snow\n",
+       "0   Dec 1        0.009223\n",
+       "1  Dec 10        0.218799\n",
+       "2  Dec 11        0.273005\n",
+       "3  Dec 12        0.091755\n",
+       "4  Dec 13        0.026163\n",
+       "5  Dec 14        0.048648\n",
+       "6  Dec 15        0.238264\n",
+       "7  Dec 16        0.169388\n",
+       "8  Dec 17        0.355134\n",
+       "9  Dec 18        0.270861"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggregated_snow_data.head(10)"
+   ]
   }
  ],
  "metadata": {
