Edited preprocessing function to make data collection easier

--- a/snowfall.ipynb
+++ b/snowfall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import gudhi as gd\n",
-    "\n",
+    "import os\n",
     "from datetime import datetime\n",
     "import matplotlib.dates as mdates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -50,105 +50,67 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>MINERAL</td>\n",
-       "      <td>Oct 1</td>\n",
+       "      <td>2024-12-01</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>DEERLODGE</td>\n",
-       "      <td>Oct 1</td>\n",
+       "      <td>MADISON</td>\n",
+       "      <td>2024-12-01</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>DEERLODGE</td>\n",
-       "      <td>Oct 1</td>\n",
+       "      <td>2024-12-01</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>POWDERRIVER</td>\n",
-       "      <td>Oct 1</td>\n",
+       "      <td>DEERLODGE</td>\n",
+       "      <td>2024-12-01</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>LEWISANDCLARK</td>\n",
-       "      <td>Oct 1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>VALLEY</td>\n",
-       "      <td>Oct 2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>341</th>\n",
-       "      <td>VALLEY</td>\n",
-       "      <td>Oct 2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>VALLEY</td>\n",
-       "      <td>Oct 2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343</th>\n",
-       "      <td>VALLEY</td>\n",
-       "      <td>Oct 2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>344</th>\n",
-       "      <td>BEAVERHEAD</td>\n",
-       "      <td>Oct 2</td>\n",
+       "      <td>POWDERRIVER</td>\n",
+       "      <td>2024-12-01</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>345 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            County   date  snow_depth\n",
-       "0          MINERAL  Oct 1         0.0\n",
-       "1        DEERLODGE  Oct 1         NaN\n",
-       "2        DEERLODGE  Oct 1         0.0\n",
-       "3      POWDERRIVER  Oct 1         0.0\n",
-       "4    LEWISANDCLARK  Oct 1         NaN\n",
-       "..             ...    ...         ...\n",
-       "340         VALLEY  Oct 2         0.0\n",
-       "341         VALLEY  Oct 2         NaN\n",
-       "342         VALLEY  Oct 2         0.0\n",
-       "343         VALLEY  Oct 2         0.0\n",
-       "344     BEAVERHEAD  Oct 2         0.0\n",
-       "\n",
-       "[345 rows x 3 columns]"
+       "        County       date  snow_depth\n",
+       "0      MINERAL 2024-12-01         0.0\n",
+       "1      MADISON 2024-12-01         NaN\n",
+       "2    DEERLODGE 2024-12-01         0.0\n",
+       "3    DEERLODGE 2024-12-01         0.0\n",
+       "4  POWDERRIVER 2024-12-01         0.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# List of file paths\n",
-    "file_paths = [\"snow_oct.csv\", \"snow_nov.csv\", \"snow_dec.csv\", \"snow_jan.csv\"]\n",
     "\n",
-    "def preprocess_snow_data(file_paths):\n",
+    "def preprocess_snow_data(folder_path):\n",
     "    all_data = []\n",
     "\n",
+    "    # Get all CSV files in the folder\n",
+    "    file_paths = [os.path.join(folder_path, f) for f in os.listdir(folder_path) if f.endswith('.csv')]\n",
+    "\n",
     "    for file_path in file_paths:\n",
-    "        # Load data, skipping metadata rows\n",
+    "        # Read the first few rows to extract the year\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            first_row = file.readlines()[0]  # Get the first row\n",
+    "            year_month = first_row.split(',')[1].strip()  # Extract the month-year string\n",
+    "            year = year_month.split(' ')[1]  # Split and take the year part\n",
+    "\n",
+    "        # Load the actual data, skipping the metadata rows\n",
     "        df = pd.read_csv(file_path, skiprows=4)\n",
     "\n",
     "        # Identify date columns by removing metadata-related columns\n",
@@ -157,6 +119,9 @@
     "\n",
     "        # Melt the dataframe to long format, keeping only date columns\n",
     "        df_long = df.melt(id_vars=[\"County\"], value_vars=date_cols, var_name=\"date\", value_name=\"snow_depth\")\n",
+    "\n",
+    "        # Add the year to the 'date' column\n",
+    "        df_long['date'] = df_long['date'] + ' ' + year  # Append the extracted year to the date\n",
     "\n",
     "        # Replace 'M' with NaN and 'T' (trace amounts) with 0.01\n",
     "        df_long[\"snow_depth\"] = df_long[\"snow_depth\"].replace({\"M\": None, \"T\": 0.01}).astype(float)\n",
@@ -167,38 +132,38 @@
     "    # Concatenate all files\n",
     "    clean_data = pd.concat(all_data, ignore_index=True)\n",
     "\n",
+    "    # Convert 'date' to datetime\n",
+    "    clean_data['date'] = pd.to_datetime(clean_data['date'], format='%b %d %Y')\n",
+    "\n",
     "    return clean_data\n",
     "\n",
-    "\n",
-    "\n",
-    "# Test preprocessing with the uploaded December data\n",
-    "cleaned_snow_data = preprocess_snow_data(file_paths)\n",
-    "cleaned_snow_data.head(345)\n",
-    "\n",
-    "\n"
+    "# Example: preprocess data from a folder\n",
+    "folder_path = '.\\data'\n",
+    "cleaned_snow_data = preprocess_snow_data(folder_path)\n",
+    "cleaned_snow_data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       date  state_avg_snow\n",
-      "0     Dec 1        0.009223\n",
-      "1    Dec 10        0.218799\n",
-      "2    Dec 11        0.273005\n",
-      "3    Dec 12        0.091755\n",
-      "4    Dec 13        0.026163\n",
-      "..      ...             ...\n",
-      "118   Oct 5        0.000000\n",
-      "119   Oct 6        0.000000\n",
-      "120   Oct 7        0.000000\n",
-      "121   Oct 8        0.000000\n",
-      "122   Oct 9        0.000000\n",
+      "          date  state_avg_snow\n",
+      "0   2024-01-01        0.023049\n",
+      "1   2024-01-02        0.000367\n",
+      "2   2024-01-03        0.001840\n",
+      "3   2024-01-04        0.098346\n",
+      "4   2024-01-05        0.041817\n",
+      "..         ...             ...\n",
+      "118 2024-12-27        0.078915\n",
+      "119 2024-12-28        0.122403\n",
+      "120 2024-12-29        0.162725\n",
+      "121 2024-12-30        1.119695\n",
+      "122 2024-12-31        0.475893\n",
       "\n",
       "[123 rows x 2 columns]\n"
      ]
@@ -229,6 +194,7 @@
     "\n",
     "# Example usage (assuming cleaned data is ready)\n",
     "aggregated_snow_data = aggregate_snow_data(cleaned_snow_data, county_areas_df)\n",
+    "aggregated_snow_data = aggregated_snow_data.sort_values(by=\"date\")\n",
     "\n",
     "# Print or work with the DataFrame\n",
     "print(aggregated_snow_data)\n"
@@ -236,7 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +306,33 @@
        "9  Dec 18        0.270861"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "aggregated_snow_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6649999744887705"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggregated_snow_data['state_avg_snow'].max()"
    ]
   }
  ],
