New cell with pipeline for multiple time series - still needs to be tested on real data

--- a/snowfall2.ipynb
+++ b/snowfall2.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3394,6 +3394,8 @@
     }
    ],
    "source": [
+    "# Create point cloud from snow data alone, using time delay embedding, and compute persistence\n",
+    "\n",
     "years = [2015,2016,2017,2018,2019,2020,2021,2022,2023]\n",
     "\n",
     "for year in years:\n",
@@ -3514,6 +3516,83 @@
     "\n",
     "merger.write(\"output.pdf\")\n",
     "merger.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create point cloud from multiple time series, without time delay embedding, and compute persistence\n",
+    "\n",
+    "years = [2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]\n",
+    "window_size = 20  # Window for sliding persistence computation\n",
+    "\n",
+    "# Assume each dataframe has 'Date' column and a single time series column.\n",
+    "# List all your separate time series DataFrames here:\n",
+    "dataframes = [\n",
+    "    pd.read_csv(\"snow.csv\", parse_dates=[\"Date\"], index_col=\"Date\"),\n",
+    "    pd.read_csv(\"temp.csv\", parse_dates=[\"Date\"], index_col=\"Date\"),\n",
+    "    pd.read_csv(\"humidity.csv\", parse_dates=[\"Date\"], index_col=\"Date\"),\n",
+    "    # Add more DataFrames as needed\n",
+    "]\n",
+    "\n",
+    "# Merge all DataFrames on the 'Date' index\n",
+    "data = dataframes[0]  # Start with the first DataFrame\n",
+    "for df in dataframes[1:]:\n",
+    "    data = data.join(df, how=\"inner\")  # Inner join ensures only matching dates\n",
+    "\n",
+    "# Rename columns dynamically\n",
+    "data.columns = [f\"var_{i}\" for i in range(len(data.columns))]  # Generic variable names\n",
+    "\n",
+    "# === PROCESSING FOR EACH YEAR ===\n",
+    "for year in years:\n",
+    "    # Select data from August 1 of `year` to July 31 of `year+1`\n",
+    "    data1 = data.loc[f'{year}-08-01' : f'{year+1}-07-31']\n",
+    "\n",
+    "    # Create an array for persistence diagrams\n",
+    "    dgms = np.empty(len(data1) - window_size, dtype=object)\n",
+    "\n",
+    "    # Sliding window approach\n",
+    "    for i in range(len(data1) - window_size):\n",
+    "        # Extract window of data (each row is now an N-dimensional point)\n",
+    "        point_cloud = data1.iloc[i:i+window_size].values  \n",
+    "\n",
+    "        # Compute persistence\n",
+    "        rc = gd.RipsComplex(points=point_cloud)\n",
+    "        st = rc.create_simplex_tree(max_dimension=2)\n",
+    "        st.persistence()\n",
+    "        dgm = st.persistence_intervals_in_dimension(1)  \n",
+    "        dgms[i] = dgm  \n",
+    "\n",
+    "    # Compute landscape norms\n",
+    "    norms = np.zeros(dgms.shape[0])\n",
+    "    for i in range(dgms.shape[0]):\n",
+    "        if dgms[i] is not None and len(dgms[i]) > 0:\n",
+    "            l = Landscape(num_landscapes=2, resolution=10).fit_transform([dgms[i]])\n",
+    "            norms[i] = np.linalg.norm(l[0])\n",
+    "\n",
+    "    # === PLOTTING ===\n",
+    "    month_locator = mdates.MonthLocator()\n",
+    "    fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "    month_year_formatter = mdates.DateFormatter('%b')\n",
+    "    ax.xaxis.set_minor_locator(month_locator)\n",
+    "    ax.xaxis.set_major_formatter(month_year_formatter)\n",
+    "    ax.plot(data1.index[:-window_size], norms, label=\"Persistence Norms\")\n",
+    "\n",
+    "    ax.set_title(f'August 1, {year} to July 31, {year+1}')\n",
+    "    ax.set_ylabel(\"Norm Value\")\n",
+    "    ax.set_xlabel(\"Date\")\n",
+    "\n",
+    "    # Overlay one of the time series for reference (e.g., the first variable)\n",
+    "    ax2 = ax.twinx()\n",
+    "    ax2.plot(data1.index[:-window_size], data1.iloc[:-window_size, 0], c='k', alpha=0.3, label=\"First Time Series\")\n",
+    "\n",
+    "    fig.autofmt_xdate()\n",
+    "    plt.legend()\n",
+    "    plt.savefig(f'output_{year}.pdf', dpi=300)\n",
+    "    plt.show()\n"
    ]
   }
  ],
